--- a/front/src/App.css
+++ b/front/src/App.css
@@ -2,15 +2,16 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.fila {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+}
+.element {
+  margin: 25px;
 }
 
 .App-header {
@@ -27,7 +28,18 @@
 .App-link {
   color: #61dafb;
 }
-
+.Boton {
+  width: 250px;
+  height: 40px;
+  color: #8299c5;
+  border: 2px solid #61dafb;
+  border-radius: 15px;
+  margin: 15px;
+  cursor: pointer;
+}
+.Boton:hover{
+  background: #32353c;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
