--- a/front/src/Components/BasicTable.css
+++ b/front/src/Components/BasicTable.css
@@ -24,7 +24,7 @@
     width: 60%;
     margin: 0 auto;
   display: table;
-  padding: 0 0 8em 0;
+  padding: 0 0 35px 0;
 }
 
 .container td, .container th {
