--- a/front/src/App.css
+++ b/front/src/App.css
@@ -40,6 +40,10 @@
 .Boton:hover{
   background: #32353c;
 }
+
+p {
+  font-size: small;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
